// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KQL Parser should parse a compound query with AND 1`] = `
{
  "bool": {
    "filter": [
      {
        "bool": {
          "minimum_should_match": 1,
          "should": [
            {
              "query_string": {
                "fields": [
                  "filePath",
                ],
                "query": "*parser*",
              },
            },
          ],
        },
      },
      {
        "bool": {
          "minimum_should_match": 1,
          "should": [
            {
              "match_phrase": {
                "type": "code",
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`KQL Parser should parse a nested query 1`] = `
{
  "nested": {
    "path": "symbols",
    "query": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "match_phrase": {
              "symbols.name": "toElasticsearchQuery",
            },
          },
        ],
      },
    },
    "score_mode": "none",
  },
}
`;

exports[`KQL Parser should parse a query with a NOT condition 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "match": {
              "language": "markdown",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`KQL Parser should parse a query with a query string query and complex nesting 1`] = `
{
  "bool": {
    "filter": [
      {
        "multi_match": {
          "lenient": true,
          "query": "addTool",
          "type": "phrase",
        },
      },
      {
        "bool": {
          "minimum_should_match": 1,
          "should": [
            {
              "bool": {
                "minimum_should_match": 1,
                "should": [
                  {
                    "match_phrase": {
                      "type": "code",
                    },
                  },
                ],
              },
            },
            {
              "bool": {
                "minimum_should_match": 1,
                "should": [
                  {
                    "match_phrase": {
                      "kind": "function_definition",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`KQL Parser should parse a query with an OR condition 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "bool": {
          "minimum_should_match": 1,
          "should": [
            {
              "match": {
                "language": "typescript",
              },
            },
          ],
        },
      },
      {
        "bool": {
          "minimum_should_match": 1,
          "should": [
            {
              "match": {
                "language": "javascript",
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`KQL Parser should parse a simple field query 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "query_string": {
          "fields": [
            "filePath",
          ],
          "query": "*parser*",
        },
      },
    ],
  },
}
`;
